# agi-android-mcp

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
src/agi_android_mcp/: __init__.py  server.py
